syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.drizzle.ml.word2vec.service";
option java_outer_classname = "W2VService";
option objc_class_prefix = "W2V";

package word2vec_server;

service Word2VecService {
    rpc GetVectorMap (stream Word) returns (stream WordVector) {
    }

    rpc GetNearestWord (stream NearestToVector) returns (stream VectorWordList) {
    }

    rpc GetStatus (VoidMessage) returns (Status) {
    }
}

message VoidMessage {

}
message Status {
    bool ready = 1;
}

message Word {
    string word = 1;
}

message NearestToVector {
    repeated double vector = 1;
    int32 limit = 2;
}

message WordVector {
    Word word = 1;
    repeated double vector = 2;
}

message VectorWordList {
    repeated double vector = 1;
    repeated Word words = 2;
}
